re-enable supports for specialization